# Temporal

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  SKILL.md  copilot-instructions.md  pyproject.toml
.agents/skills/converge-commit/: SKILL.md
.agents/skills/decision-import/: SKILL.md
.agents/skills/minimal-espc/: SKILL.md
.agents/skills/rules-audit/: SKILL.md
.agents/skills/session-handoff/: SKILL.md
.agents/skills/spec-code-alignment/: SKILL.md
.agents/skills/subagent-orchestrator/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: review.agent.md
.github/instructions/: backend.instructions.md  qml.instructions.md  tests.instructions.md
.github/prompts/: push.prompt.md  root-cause-fix.prompt.md  rules-audit.prompt.md
.github/skills/odas-workflow/: SKILL.md
.github/skills/rules-audit/: SKILL.md
.github/skills/rules-governance/: SKILL.md
.github/skills/session-handoff/: SKILL.md
.github/skills/spec-code-alignment/: SKILL.md
config/: odas.example.toml
docs/: core-features.md  espc-ai-flows.md  minimal-espc.md  phase-progress.md  risks.md  runbook.md
docs/handoffs/: session-2026-03-18.md  session-2026-03-19.md
docs/prd/: copilot-to-codex-skill.md  phase-a-project-skeleton.md  phase-b-remote-control-and-streams.md  phase-c-sources-filters.md  phase-d-auto-recording.md  phase-d-sss-routing-and-session-visibility.md  phase-e-agent-governance.md  phase-f-channel-cap-alignment.md  phase-f-integration-runbook-risks.md  phase-f-validation-and-delivery.md  phase-g-ui-visual-parity.md  phase-h-preview-data-linkage.md  phase-h-preview-entry-and-bridge.md  phase-h-preview-filtering-and-validation.md
docs/prd/ui-live-data/: app-action-button.md  app-footer.md  app-header.md  app-side-checkbox.md  center-pane.md  chart-canvas.md  left-sidebar.md  main-window.md  right-sidebar.md  source-sphere-view.md
specs/: AGENTS.md  ideas.md  in-progress.md  index.md  phase-progress.md
specs/contracts/: app-bridge-status.md  app-bridge.md  index.md  odas-integration.md  odas.md  potential-overlay.md  preview-mapping.md  preview-source.md  recording-filename.md  recording-lifecycle.md  recording.md  remote-control-channel.md  remote-control.md  requirements.md  tracking-identity.md
specs/contracts/ui/: app-action-button.md  app-footer.md  app-header.md  app-side-checkbox.md  center-pane.md  chart-canvas.md  left-sidebar.md  main-window.md  right-sidebar.md  source-sphere-view.md
specs/decisions/: index.md
specs/features/: app-bridge-debug-kit.md  app-bridge-refactor-control-status.md  app-bridge-refactor-modularization.md  bootstrap-config-fallback-order.md  bootstrap.md  governance.md  index.md  media-pipeline.md  preview-mode.md  recording-sample-rate-mismatch.md  recording.md  remote-control-start-state-desync.md  remote-control.md  routing-session.md  runtime-reliability.md  testing-refactor-suite-partition.md  ui-system-potential-overlay.md  ui-system-refactor-chart-canvas.md  ui-system.md
specs/handoffs/: session-2026-03-18.md  session-2026-03-19.md  session-2026-03-20.md  session-2026-03-21.md
specs/knowledge/: app-bridge-execution-model.md  app-bridge-source-analysis.md  architecture.md  espc-philosophy.md  index.md  odas-protocol.md  odas.md  odas_analysis.md  odas_web_analysis.md  testing-source-analysis.md  testing.md  unittest.md
specs/knowledge/references/: odas-analysis.md  odas-json-protocol-source-analysis.md  odas-web-chart-canvas-analysis.md  odas_web-analysis.md  qt-chart-backend-investigation.md
specs/legacy/: copilot-to-codex-skills.md
specs/legacy/handoffs/: session-2026-03-18.md  session-2026-03-19.md  session-2026-03-20.md  session-2026-03-21.md
specs/legacy/plans/: phase-a-project-skeleton.md  phase-d-sss-routing-and-session-visibility.md  phase-f-channel-cap-alignment.md  phase-f-validation-and-delivery.md  phase-h-preview-data-linkage.md  phase-h-preview-filtering-and-validation.md
specs/legacy/ui/: app-action-button.md  chart-canvas.md
specs/plans/: phase-b-remote-control-and-streams.md  phase-c-sources-filters.md  phase-d-auto-recording.md  phase-e-agent-governance.md  phase-f-integration-runbook-risks.md  phase-g-ui-visual-parity.md  phase-h-preview-data-linkage.md  phase-h-preview-entry-and-bridge.md  phase-h-preview-filtering-and-validation.md  phase-i-test-completeness-and-hardening.md
specs/todo/: 2026-03-27-spec-code-alignment-scan.md  2026-04-03-subagents-orchestration.md
specs/ui/: app-footer.md  app-header.md  app-side-checkbox.md  center-pane.md  left-sidebar.md  main-window.md  right-sidebar.md  source-sphere-view.md
src/temporal/: app.py  main.py  preview_bridge.py  preview_data.py  preview_main.py  qml_list_model.py  qt_decorators.py
src/temporal/app/: __init__.py  bridge.py  fake_runtime.py  preview_runtime.py  recording_audio.py  status_state.py  (+2 more)
tests/: app_bridge_integration_support.py  app_bridge_recording_support.py  chart_bridge_contract_support.py  preview_bridge_support.py  remote_odas_support.py  test_app_bridge_integration.py  test_app_bridge_recording.py  test_app_bridge_recording_projection.py  test_app_bridge_recording_remote_control.py  test_app_bridge_remote_log.py  test_app_bridge_remote_startup.py  test_app_bridge_remote_stop.py  test_app_bridge_stream_recording_integration.py  test_auto_recorder.py  test_chart_bridge_contract.py  test_chart_bridge_ingress.py  test_chart_bridge_parity.py  test_chart_bridge_potential.py  test_chart_bridge_qml_contract.py  test_chart_bridge_runtime.py  test_chart_window_semantics.py  test_config_loader.py  test_json_stream.py  test_odas_message_view.py  test_odas_stream_client.py  test_preview_bridge.py  test_preview_bridge_controls.py  test_preview_bridge_entrypoint.py  test_preview_bridge_qml_contract.py  test_preview_bridge_scenarios.py  test_projection_parity.py  test_qml_list_model.py  test_remote_odas.py  test_remote_odas_config.py  test_remote_odas_lifecycle.py  test_remote_odas_log.py  test_remote_odas_shell.py  test_source_tracking_semantics.py  test_ui_projection.py
tools/perf/: potential_ingress_stress.py
(+45 files in other folders)
