[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal"
version = "0.1.0"
description = "Temporal: ODAS upper-computer interaction client built with Python + QML"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pyside6>=6.8.0,<7.0.0",
    "paramiko>=3.5.0,<4.0.0",
    "tomli>=2.2.1,<3.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390,<2.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[project.scripts]
temporal = "temporal.main:main"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["temporal*"]
namespaces = true

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
ignore = [
    "*:/**/Python*/Lib",
    "**/qml",
]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportInvalidStubStatement = "warning"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "src"
typeCheckingMode = "strict"
reportCallIssue = "warning"
reportOperatorIssue = "warning"
reportAttributeAccessIssue = "warning"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportDuplicateImport = "error"
reportImportCycles = "error"
reportShadowedImports = "error"
reportConstantRedefinition = "warning"
reportDeprecated = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnreachable = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
