[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal"
version = "0.1.0"
description = "Temporal: ODAS upper-computer interaction client built with Python + QML"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pyside6~=6.10.0",
    "paramiko>=3.5.0,<4.0.0",
    "tomli>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
]

[project.scripts]
temporal = "temporal.main:main"
temporal-preview = "temporal.main:preview_main"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = [
    "src",
    "tests",
]
exclude = [
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    ".venv",
]
ignore = [
    "*:/**/Python*/Lib",
    "**/qml",
]
typeCheckingMode = "basic"
reportCallIssue = "none"
reportOperatorIssue = "none"
reportAttributeAccessIssue = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportInvalidStubStatement = "warning"
reportMissingTypeStubs = "warning"

[[tool.pyright.executionEnvironments]]
root = "src"
reportCallIssue = "warning"
reportOperatorIssue = "warning"
reportAttributeAccessIssue = "warning"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportDuplicateImport = "error"
reportImportCycles = "error"
reportConstantRedefinition = "warning"
reportDeprecated = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportUnreachable = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
